[package]
name = "ballchasing"
version = "0.0.1"
edition = "2021"
authors = ["David Christie <david.christiea@gmail.com>"]
description = "An API Wrapper for Ballchasing.com"
repository = "https://github.com/DavidAChris/ballchasing"
license = "MIT"
readme = "README.md"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
